<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mfadel.angel.firebaseauth.UserActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/btn_selectitem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:background="@color/colorAccent"
            android:text="@string/btn_select_item"
            android:textColor="@android:color/black" />
        <ImageView
            android:id="@+id/imagepreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:src="@drawable/firebaseicon"
            android:layout_weight="0.19" />





        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_title"
                android:inputType="textAutoComplete"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_description"
                android:inputType="textAutoComplete"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/note"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_note"
                android:inputType="textAutoComplete"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            app:layout_anchor="@+id/linearLayout"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:layout_weight="1" />


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorgreen"
            android:text="@string/btn_submit_text"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>


